# Simulated_interview_system

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6f5141058dbb_initial_tables.py  8992946e43e6_add_unique_constraint_to_question_title.py
backend/src/: config.py  database.py  main.py
backend/src/api/: analytics.py  categories.py  errors.py  interview.py  questions.py  review.py  similar.py
backend/src/models/: __init__.py  base.py  category.py  error_record.py  interview.py  question.py  review_log.py  tag.py
backend/src/schemas/: __init__.py  analytics.py  category.py  common.py  interview.py  question.py  review.py
backend/src/services/: category_service.py  import_service.py  question_service.py  review_service.py
backend/tests/: conftest.py  test_category_service.py  test_import_service.py  test_question_service.py  test_questions_api.py  test_review_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/questions/: page.tsx
frontend/src/app/review/: page.tsx
frontend/src/components/: app-sidebar.tsx
frontend/src/components/categories/: category-manager.tsx
frontend/src/components/questions/: import-dialog.tsx  question-delete-dialog.tsx  question-form.tsx  question-table.tsx
frontend/src/components/review/: flash-card.tsx  rating-buttons.tsx  review-complete.tsx  review-progress.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
(+2 files in other folders)
