[project]
name = "mianshi-backend"
version = "0.1.0"
description = "Mock Interview System Backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "chromadb>=0.6.0",
    "openai>=1.60.0",
    "fsrs>=4.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
